@@ -30,3 +30,4 @@ t/93disttest.t
 t/94metatest.t
 t/95changedate.t
 t/96metatest.t
+xt/23run_methods.t
